--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.18.1"
   },
   "scripts": {
     "start": "nodemon index.js",
@@ -19,5 +19,17 @@
     "nodemon": "^2.0.19",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2"
-  }
+  },
+  "description": "## Getting started",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tdot124/javascript-basics-express.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tdot124/javascript-basics-express/issues"
+  },
+  "homepage": "https://github.com/tdot124/javascript-basics-express#readme"
 }
